--- a/src/app/usit/components/consultant-components/consultant-applied-jobs/consultant-applied-jobs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-applied-jobs/consultant-applied-jobs.component.html
@@ -1,26 +1,12 @@
 <div class="hot-list-container">
     <ul class="breadcrumb">
         <li><a (click)="navigateToDashboard()">Home</a></li>
-        <li class="last">Job Requirements</li>
+        <li class="last">Applied Jobs</li>
     </ul>
     <div class="header-container mat-elevation-z1">
         <span class="header-text">
-            Job Requirements
+            Applied Jobs
         </span>
-        <!-- <div>
-            <mat-form-field class="portal-form-field">
-                <mat-label>Select a Portal</mat-label>
-                <mat-select (selectionChange)="onSelectionChange($event)">
-                    <mat-option value="all">All</mat-option>
-                    <mat-option value="dice">Dice</mat-option>
-                    <mat-option value="indeed">Indeed</mat-option>
-                    <mat-option value="linkedin">LinkedIn</mat-option>
-                    <mat-option value="recruit.net">Recruit</mat-option>
-                    <mat-option value="Simplyhired">Simply Hired</mat-option>
-                    <mat-option value="techfetch">Tech Fetch</mat-option>   
-                </mat-select>
-            </mat-form-field>
-        </div> -->
         <div class="hot-list-actions">
             <div class="search-hot-list">
                 <input matInput type="text" class="search" placeholder="search " (keyup)="applyFilter($event)">
@@ -83,20 +69,18 @@
                 </ng-container>
 
                 <!-- Source Column-->
-                <!-- <ng-container matColumnDef="source">
+                <ng-container matColumnDef="source">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Source"
                         style="width: 3%">Source</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 3%"> {{ element?.source | titlecase}} </td>
-                </ng-container> -->
-                
-                <!-- Action Column-->
-                <ng-container matColumnDef="Action">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Action"
-                        style="width: 3%">Action</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
-                        <button mat-flat-button color="primary" style="width: max-content; height: max-content" (click)="apply(element)">Apply</button>
-                    </td>
                 </ng-container>
+                
+                <!-- Status Column-->
+                <!-- <ng-container matColumnDef="Status">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Status"
+                        style="width: 3%">Status</th>
+                    <td mat-cell *matCellDef="let element" nowrap style="width: 3%">{{ element?.status | titlecase}} </td>
+                </ng-container> -->
 
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
