People tab changes and removed console.log in the files

--- a/src/app/usit/components/people/active/active.component.scss
+++ b/src/app/usit/components/people/active/active.component.scss
@@ -84,7 +84,7 @@
   .mat-column-Employer,
   .mat-column-Visa,
   .mat-column-DOJ,
-  .mat-column-PayType,
+  .mat-column-EmpId,
   .mat-column-EmployementType,
   .mat-column-StateofEmp,
   .mat-column-Status {
