--- a/src/app/usit/components/sales/consultant-list/consultant-track/consultant-track.component.scss
+++ b/src/app/usit/components/sales/consultant-list/consultant-track/consultant-track.component.scss
@@ -54,7 +54,7 @@ tbody{
   margin-top: 16px;
   display: flex;
   align-items: flex-end;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .no-data-found{
