--- a/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
+++ b/src/app/usit/components/consultant-components/consultant-openreqs/consultant-openreqs.component.html
@@ -94,7 +94,16 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Action"
                         style="width: 3%">Action</th>
                     <td mat-cell *matCellDef="let element" nowrap style="width: 3%">
-                        <button mat-flat-button color="primary" style="width: max-content; height: max-content" (click)="apply(element)">Apply</button>
+                        <ng-container *ngIf="element?.status === 'Apply'; else statusText">
+                            <button mat-flat-button color="primary" style="width: max-content; height: max-content" (click)="apply(element)">
+                                {{element?.status}}
+                            </button>
+                        </ng-container>
+                        <ng-template #statusText>
+                            <span [ngStyle]="{'font-weight': 'bold', 'color': 'green'}">
+                                {{element?.status}}
+                            </span>
+                        </ng-template>
                     </td>
                 </ng-container>
 
