--- a/src/app/usit/components/people/active/active.component.html
+++ b/src/app/usit/components/people/active/active.component.html
@@ -31,15 +31,20 @@
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
+                <!-- Emp ID-->
+                <ng-container matColumnDef="EmpId">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by EmpId" mat-sort-header> Emp Id </th>
+                    <td mat-cell *matCellDef="let element">{{element?.companyname | titlecase}}</td>
+                </ng-container>
                 <!-- Date-->
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name" mat-sort-header> Name
                     </th>
                     <td mat-cell *matCellDef="let element">
-                        <!-- <span class="consultant-id">
+                        {{element?.employeename}}
+                        <!-- (click)="goToImgInfo(element)" <span class="consultant-id">
                          {{element?.employeename}}
                         </span> -->
-                        {{element?.employeename}}
                     </td>
                 </ng-container>
                 <!-- ID-->
@@ -60,12 +65,12 @@
                 </ng-container>
 
                 <!-- PayType-->
-                <ng-container matColumnDef="PayType">
+                <!-- <ng-container matColumnDef="PayType">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by PayType" mat-sort-header>
                         Pay Type </th>
                     <td mat-cell *matCellDef="let element"> {{element?.paytype}}
                     </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Employement Type-->
                 <ng-container matColumnDef="EmployementType">
