--- a/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.html
+++ b/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.html
@@ -33,10 +33,10 @@
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name" mat-sort-header> Name
                     </th>
                     <td mat-cell *matCellDef="let element">
-                        <!-- <span class="consultant-id"(click)="goToConsultantInfo(element, flag)">
                         {{element?.employeename}}
-                       </span> -->
-                       {{element?.employeename}}
+                        <!-- (click)="goToImgInfo(element)" <span class="consultant-id">
+                         {{element?.employeename}}
+                        </span> -->
                     </td>
                 </ng-container>
                 <!-- ID-->
@@ -71,7 +71,7 @@
                     <th mat-header-cell *matHeaderCellDef 
                         sortActionDescription="Sort by EmployementType" mat-sort-header>
                         Employement Type </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.employeementType}}
+                    <td mat-cell *matCellDef="let element"> {{element?.employeementype}}
                     </td>
                 </ng-container>
 
@@ -88,7 +88,7 @@
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Status" mat-sort-header>
                      Status
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.interview_status}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
                 </ng-container>
 
                 <!-- Action Column -->
