--- a/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.html
+++ b/src/app/usit/components/people/leave-of-absence/leave-of-absence.component.html
@@ -28,6 +28,13 @@
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
+                
+                <!-- Emp ID-->
+                <ng-container matColumnDef="EmpId">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by EmpId" mat-sort-header> Emp Id </th>
+                    <td mat-cell *matCellDef="let element">{{element?.empid}}</td>
+                </ng-container>
+                
                 <!-- Date-->
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name" mat-sort-header> Name
