--- a/src/app/usit/components/people/terminated/terminated.component.scss
+++ b/src/app/usit/components/people/terminated/terminated.component.scss
@@ -86,6 +86,7 @@
   .mat-column-DOJ,
   .mat-column-PayType,
   .mat-column-EmployementType,
+  .mat-column-EmpId,
   .mat-column-StateofEmp,
   .mat-column-Status {
     border-right: 1px solid lightgray;
