--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.html
@@ -55,7 +55,9 @@
           >
             Requirement Number
           </th>
-          <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 12%">{{ element?.reqnumber }}</td>
+          <td mat-cell *matCellDef="let element" class="req-info" (click)="goToReqInfo(element)" style="width: 10%">{{ element?.reqnumber }} 
+            <mat-icon *ngIf = "element?.submission_count === null" [ngClass]="{  'red-icon': element?.submission_count === null }">flag</mat-icon>
+          </td>
         </ng-container>
         <!-- Date  mat-sort-header-->
         <ng-container matColumnDef="Date">
@@ -103,11 +105,10 @@
             *matHeaderCellDef
             mat-sort-header
             sortActionDescription="Sort by IPVendor"
-            style="width: 22%"
           >
             IP/Vendor
           </th>
-          <td mat-cell *matCellDef="let element" style="width: 22%">{{ element?.vendor | titlecase }}</td>
+          <td mat-cell *matCellDef="let element">{{ element?.vendor | titlecase }}</td>
         </ng-container>
         <!-- Contact Number-->
         <ng-container matColumnDef="EmployementType">
@@ -116,14 +117,43 @@
             *matHeaderCellDef
             mat-sort-header
             sortActionDescription="Sort by EmployementType"
-            style="width: 11.5%"
           >
             Employement Type
           </th>
-          <td mat-cell *matCellDef="let element" style="width: 11.5%">
+          <td mat-cell *matCellDef="let element">
             {{ element?.employmenttype | titlecase}}
           </td>
         </ng-container>
+
+        <!-- Submitted Column-->
+        <ng-container matColumnDef="Submitted">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by Submitted"
+          >
+          Submitted CVs
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element?.submission_count === null ? 0 : element?.submission_count}}
+          </td>
+        </ng-container>
+
+        <!-- Submitted By Column-->
+        <!-- <ng-container matColumnDef="SubmittedBy">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            mat-sort-header
+            sortActionDescription="Sort by SubmittedBy"
+          >
+          Submitted By
+          </th>
+          <td mat-cell *matCellDef="let element">
+            {{ element?.submittedby | titlecase}}
+          </td>
+        </ng-container> -->
 
         <!-- Status Column -->
         <ng-container matColumnDef="Status">
