--- a/src/app/usit/components/profile/profile.component.html
+++ b/src/app/usit/components/profile/profile.component.html
@@ -1,12 +1,12 @@
 <div class="profile">
     <div class="item1">
-        <div style="display: flex; justify-content: right;">
+        <div class="flex-end">
             <button mat-icon-button (click)="editConsultant(profiledata)">
                 <mat-icon>edit</mat-icon>
-              </button>
+            </button>
         </div>
         <div>
-            <img src="assets/images/file.png" alt="profile avatar" width="150px" height="150px">
+            <img src="assets/images/file.png" alt="profile avatar" class="profile-avatar">
         </div>
         <div class="profile-name">
             {{ profiledata?.consultantname }}
@@ -14,106 +14,87 @@
         <div class="job-title">
             {{ profiledata?.position }}
         </div>
-        <div style="display: flex;  align-items: center; justify-content: center; padding: 0;">
-            <div style="font-weight: bold; color: rgb(3, 67, 204);" [ngStyle]="{'cursor': profiledata?.resume ? 'pointer' : 'default'}" (click)="downloadfile(profiledata.consultantid,profiledata.resume,'resume')"> {{ profiledata?.resume ? profiledata?.resume : 'Upload Resume' }}</div>
+        <div class="flex-center">
+            <div class="resume" [ngStyle]="{'cursor': profiledata?.resume ? 'pointer' : 'default'}" (click)="downloadfile(profiledata.consultantid,profiledata.resume,'resume')">
+                {{ profiledata?.resume ? profiledata?.resume : 'Upload Resume' }}
+            </div>
             <div>
                 <button mat-icon-button (click)="editDetails(profiledata, 'Upload Resume', 'Resume')">
                     <mat-icon>edit</mat-icon>
                 </button>
             </div>
         </div>
-        
         <div class="skills">
-            <h3 style="text-align: left; font-weight: bold;">Skills</h3>
+            <h3 class="skills-header">
+                Skills
+                <mat-icon (click)="skillsInfo()" class="skill-info">info</mat-icon>
+            </h3>
             <p>{{ profiledata?.skills }}</p>
         </div>
     </div>
-    <div class="item2" style="text-align: left;">
-        <div style="display: flex; align-items: center;">
-            <div>
-                <span style="font-weight: bold; align-items: center;">Basic Details</span>
-            </div>
-            <div>
-                <button mat-icon-button (click)="editDetails(profiledata, 'Basic Details', 'Basic')">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </div>
+
+    <div class="item2">
+        <div class="flex-center text-left">
+            <span class="section-title">Basic Details</span>
+            <button mat-icon-button (click)="editDetails(profiledata, 'Basic Details', 'Basic')">
+                <mat-icon>edit</mat-icon>
+            </button>
         </div>
-            
-        <div style="display: flex; width: 100; align-items: center; justify-content: space-between;" class="basic">
+        <div class="basic">
             <div>
-                <p style="color: grey">Email</p>
-                <p style="font-weight: bold;">{{ profiledata?.consultantemail ? profiledata?.consultantemail : '-' }}</p>
-            </div>
-
-            <div>
-                <p style="color: grey">Contact Number</p>
-                <p style="font-weight: bold;">{{ profiledata?.contactnumber ? profiledata?.contactnumber : '-' }}</p>
+                <p class="label">Email</p>
+                <p class="value">{{ profiledata?.consultantemail ? profiledata?.consultantemail : '-' }}</p>
             </div>
             <div>
-                <p style="color: grey">Location</p>
-                <p style="font-weight: bold;"> {{ profiledata?.currentlocation ? profiledata?.currentlocation : '-' }}</p>
+                <p class="label">Contact Number</p>
+                <p class="value">{{ profiledata?.contactnumber ? profiledata?.contactnumber : '-' }}</p>
             </div>
-
+            <div>
+                <p class="label">Location</p>
+                <p class="value">{{ profiledata?.currentlocation ? profiledata?.currentlocation : '-' }}</p>
+            </div>
         </div>
     </div>
-    <div class="item3" style="text-align: left;">
-        <div style="display: flex; align-items: center;">
-            <div>
-                <span style="font-weight: bold; align-items: center;">Work Experience</span>
-            </div>
-            <div>
-                <button mat-icon-button (click)="editDetails(profiledata, 'Work Experience','Work')">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </div>
+
+    <div class="item3">
+        <div class="flex-center text-left">
+            <span class="section-title">Work Experience</span>
+            <button mat-icon-button (click)="editDetails(profiledata, 'Work Experience','Work')">
+                <mat-icon>edit</mat-icon>
+            </button>
         </div>
-
-        <div style="display: flex; width: 100; align-items: center; justify-content: space-between;" class="work">
+        <div class="work">
             <div>
-                <p style="color: grey">Experience (In Years)</p>
-                <p style="font-weight: bold;">{{ profiledata?.experience ? profiledata?.experience : '-' }}</p>
-            </div>
-
-            <div>
-                <p style="color: grey">Preferred Location</p>
-                <p style="font-weight: bold;">{{ profiledata?.relocation ? profiledata?.relocation : '-' }}</p>
+                <p class="label">Experience (In Years)</p>
+                <p class="value">{{ profiledata?.experience ? profiledata?.experience : '-' }}</p>
             </div>
             <div>
-                <!-- <p style="color: grey">Location</p>
-                <p>Karampudi, Macharla, Guntur</p> -->
+                <p class="label">Preferred Location</p>
+                <p class="value">{{ profiledata?.relocation ? profiledata?.relocation : '-' }}</p>
             </div>
-
         </div>
     </div>
-    <div class="item4" style="text-align: left;">
 
-        <div style="display: flex; align-items: center;">
-            <div>
-                <span style="font-weight: bold; align-items: center;">Education Qualifications</span>
-            </div>
-            <div>
-                <button mat-icon-button (click)="editDetails(profiledata, 'Education Qualifications', 'Education')">
-                    <mat-icon>edit</mat-icon>
-                </button>
-            </div>
+    <div class="item4">
+        <div class="flex-center text-left">
+            <span class="section-title">Education Qualifications</span>
+            <button mat-icon-button (click)="editDetails(profiledata, 'Education Qualifications', 'Education')">
+                <mat-icon>edit</mat-icon>
+            </button>
         </div>
-
-        <div style="display: flex; width: 100; align-items: center; justify-content: space-between;" class="qualifiactions">
+        <div class="qualifications">
             <div>
-                <p style="color: grey">Degree</p>
-                <p style="font-weight: bold;">{{ profiledata?.qualification ? profiledata?.qualification : '-' }}</p>
-            </div>
-
-            <div>
-                <p style="color: grey">University</p>
-                <p style="font-weight: bold;">{{ profiledata?.university ? profiledata?.university : '-' }}</p>
+                <p class="label">Degree</p>
+                <p class="value">{{ profiledata?.qualification ? profiledata?.qualification : '-' }}</p>
             </div>
             <div>
-                <p style="color: grey">Year of Passing</p>
-                <p style="font-weight: bold;">{{ profiledata?.yop ? profiledata?.yop : '-' }}</p>
+                <p class="label">University</p>
+                <p class="value">{{ profiledata?.university ? profiledata?.university : '-' }}</p>
             </div>
-
+            <div>
+                <p class="label">Year of Passing</p>
+                <p class="value">{{ profiledata?.yop ? profiledata?.yop : '-' }}</p>
+            </div>
         </div>
     </div>
 </div>
