--- a/src/app/components/register-consultant/register-consultant.component.scss
+++ b/src/app/components/register-consultant/register-consultant.component.scss
@@ -217,3 +217,11 @@ mat-mdc-menu-content {
   width: 100%;
   text-align: center;
 }
+
+::ng-deep .login-form .password .mat-mdc-form-field-error-wrapper {
+  position: relative; 
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 0 16px;
+}
