--- a/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
+++ b/src/app/usit/components/linkedprofiles/linkedprofiles.component.html
@@ -34,7 +34,7 @@
     
                     <!-- SNo Column -->
                     <ng-container matColumnDef="SerialNum">
-                        <th mat-header-cell *matHeaderCellDef>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">
                             S.No </th>
                         <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                     </ng-container>
@@ -53,7 +53,7 @@
                         </td>
                     </ng-container> -->
                     <ng-container matColumnDef="candidate_name">
-                        <th mat-header-cell *matHeaderCellDef>Candidate Name</th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by candidate_name">Candidate Name</th>
                         <td mat-cell *matCellDef="let element" >
                             <div class="cell-container">
                             <span class="consultant-name">
@@ -67,7 +67,7 @@
                     </ng-container>
                     <!-- Technology Column-->
                     <ng-container matColumnDef="address">
-                        <th mat-header-cell *matHeaderCellDef>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by address">
                             Address </th>
                         <td mat-cell *matCellDef="let element">
                             {{element?.address}}
@@ -76,7 +76,7 @@
     
                     <!-- Visa Column-->
                     <ng-container matColumnDef="category">
-                        <th mat-header-cell *matHeaderCellDef>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by category">
                             Category </th>
                         <td mat-cell *matCellDef="let element">
                             {{element?.category|titlecase}} </td>
@@ -93,7 +93,7 @@
                     </ng-container> -->
     
                     <ng-container matColumnDef="experience_summary">
-                        <th mat-header-cell *matHeaderCellDef style="width:20%"> Experience summary </th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by experience_summary" style="width:20%"> Experience summary </th>
                         <td mat-cell *matCellDef="let element" matTooltip="{{element?.experience_summary}}"
                             matTooltipPosition="below" style="width:20%; overflow: hidden; text-overflow: ellipsis;">
                             {{element?.experience_summary}} </td>
@@ -102,7 +102,7 @@
     
     
                     <ng-container matColumnDef="job_title">
-                        <th mat-header-cell *matHeaderCellDef style="width:40%"> Status </th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by job_title" style="width:40%"> Status </th>
                         <td mat-cell *matCellDef="let element" matTooltip="{{element?.job_title}}"
                             matTooltipPosition="below" style="width:40%; overflow: hidden; text-overflow: ellipsis;">
                             {{element?.job_title}} </td>
